[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Images/Stable.png" type="Texture" id=1]
[ext_resource path="res://Assets/Images/fat_man.png" type="Texture" id=2]
[ext_resource path="res://Assets/Images/little boy.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sounds/bomb-countdown-beeps-6868.mp3" type="AudioStream" id=4]
[ext_resource path="res://Scenes/MiniGame/Chimie/MiniGameCountdownTimer.gd" type="Script" id=5]

[sub_resource type="Animation" id=1]
resource_name = "Drop"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("little_boy:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 576 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("fat_man:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 608 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AudioStreamPlayer2D:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.2, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AudioStreamPlayer2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 720 ) ]
}

[node name="MiniGameCountdownTimer" type="Node2D"]
script = ExtResource( 5 )

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CountdownTimer" type="Timer" parent="Control"]

[node name="Stable" type="Sprite" parent="Control"]
position = Vector2( 0, 656 )
texture = ExtResource( 1 )

[node name="Position2D" type="Position2D" parent="Control"]

[node name="little_boy" type="Sprite" parent="Control"]
visible = false
position = Vector2( 0, 576 )
texture = ExtResource( 3 )

[node name="fat_man" type="Sprite" parent="Control"]
position = Vector2( 0, 608 )
texture = ExtResource( 2 )

[node name="DropAnimationPlayer" type="AnimationPlayer" parent="Control"]
anims/Drop = SubResource( 1 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Control"]
position = Vector2( 0, 720 )
stream = ExtResource( 4 )

[connection signal="animation_finished" from="Control/DropAnimationPlayer" to="." method="_on_DropAnimationPlayer_animation_finished"]
